# kenzieconnect

./: .gitignore  README.md  db.sqlite3  pyproject.toml  survey.txt
api/: serializers.py  views.py
backend/: settings.py  urls.py
frontend/: package-lock.json  package.json
frontend/src/: App.js  LandingCards.js  Modal.js  Routes.js  actions.js  helpers.js  index.js  main.css  nav.css  reducer.js
frontend/src/components/: HeaderLinks.js  LandingCards.js  actions.js  editProfile.js  editProfileModal.js  header.js  headerMain.js  helpers.js  landingpage.js  loginSignup.js  main.js  messageReply.js  newUserReg.js  notfound.js  penpal.js  profile.js  replyModal.js  survey.js  tips.js  userRegistration.js  winkCards.js  winks.js
kenzie_connect/: admin.py  apps.py  forms.py  models.py  serializers.py  views.py
kenzie_connect/migrations/: 0001_initial.py  0002_auto_20201009_0144.py  0002_penpal.py
