[tool.poetry]
name = "kenzieconnect"
version = "0.1.0"
description = ""
authors = ["Amanda Yonce <amanda.stork@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1.2"
django-rest = "^0.8.6"
django-cors-headers = "^3.5.0"
djangorestframework = "^3.12.1"
django-allauth = "^0.42.0"
django-rest-auth = "^0.9.5"
django-dotenv = "^1.4.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
autopep8 = "^1.5.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
